--- a/00-cv.md
+++ b/00-cv.md
@@ -1,12 +1,10 @@
-# Tom Rijntjes
-
 Pragmatic, goal oriented and versatile freelance cloud engineering consultant with seven years experience designing and developing data products. 
 
 [LinkedIn](https://www.linkedin.com/in/tomrijntjes/)
 
 ## Experience
 
-### **Cariad**/Senior Cloud Engineer
+### **Cariad**: Senior Cloud Engineer
 
 *March 2022 - Today, Ingolstadt*
 
