--- a/00-cv.md
+++ b/00-cv.md
@@ -4,30 +4,18 @@ Pragmatic, goal oriented and versatile freelance cloud engineering consultant wi
 
 ## Experience
 
-### **Cariad**: Senior Cloud Engineer
+### **Cariad**/Senior Cloud Engineer
 
 *March 2022 - Today, Ingolstadt*
 
 Contributor to a high performance cloud development team, responsible for delivering a highly scalable, high throughput system for receiving heterogenous data from the Pioneering fleet. 
 The Bigloop project is a strategic effort that enables **autonomous driving** and ADAS functionality for the various brands of Volkswagen Group.
 
-#### Programming
+**Programming**: Golang, Python
 
-- Golang
-- Python
+**Data**: PostgreSQL, Azure Storage, Apache Trino
 
-#### Data
-
-- PostgreSQL
-- Azure Storage
-- Apache Trino
-
-#### Infrastructure
-
-- Azure
-- Kubernetes
-- Terraform
-- Azure DevOps
+**Infrastructure**: Azure Cloud, Kubernetes, Terraform, Azure Devops
 
 ### **Royal Dutch Shell**/Chapter Lead Data
 
@@ -36,27 +24,20 @@ The Bigloop project is a strategic effort that enables **autonomous driving** an
 Chapter Lead of the Data Engineering Chapter at Shell Agile Hub Rotterdam. Provided technical leadership & coaching to 8 engineers. Responsible for the Apache Spark capability for large scale analytics serving the **supply chain management** and trading department.
 Agile Hub Rotterdam is a high performance product delivery department, which deploys $15m-$20m annual product spend and associated business value delivery across multiple sectors in Shell Trading & Supply, downstream, retail and the New Energies division.
 
-#### Programming
+**Programming**: Scala + Spark
 
-- Scala + Apache Spark
+**Data**: PostgreSQL, Azure Storage, Kafka
 
-#### Data
-
-- PostgreSQL
-- Azure Storage
-- Kafka
-
-#### Infrastructure
-
-- Azure
-- Kubernetes
-- Terraform
-- Apache Airflow
-- Github Actions
+**Infrastructure**: Azure Cloud, Kubernetes, Terraform, Apache Airflow, Github Actions
 
 ### **Future Facts**/Senior Consultant
 
 *February  2018 - November  2019, Amsterdam*
+
+Senior consultant  at a **predictive maintenance** project at transport company de Nederlandse Spoorwegen and at an **interaction data** platform effort at PVH (fashion). 
+Developed the internal masterclass programme for junior data engineers and held a role in the works council at Hot Item group.
+Future Facts is a boutique consulting organisation focused on data science & engineering in the context of business consulting. 
+
 
 ## Education
 
@@ -78,5 +59,18 @@ Communication Science with an emphasis on life sciences & health communication.
 
 ## People Say About Me
 
-*“Tom’s deep knowledge of data engineering technologies, right balance of delivering quality software versus pragmatism, in combination to his understanding of how a team should function, makes him a very valuable member to every team. Although technical, he has great communication skills that pass the appropriate message, even to a non technical audience.”* 
-Panagiotis Giannakoulias, worked in the same group at Shell
+> Tom’s deep knowledge of data engineering technologies, right balance of delivering quality software versus pragmatism, in combination to his understanding of how a team should function, makes him a very valuable member to every team. Although technical, he has great communication skills that pass the appropriate message, even to a non technical audience.” 
+
+Panagiotis Giannakoulias, worked in the same group at Royal Dutch Shell
+
+> Tom is an excellent coach, engineer and technical leader. He has above par communication skills and extensive knowledge about data and software engineering.
+
+Matteo Merola, managed Tom at Royal Dutch Shell
+
+> I've gotten to know Tom as an exceptionally bright person with a knack for technology and a business-driven mind within the Data & Analytics department of the Dutch Railways (NS). He played an important role in several major change processes [...].
+
+Wouter Hordijk, managed Tom at Nederlandse Spoorwegen
+
+> When starting my career as a junior data engineer Tom took upon himself the role of mentor. [...] As a mentor Tom stimulated a proactive, business-driven and 'we will find a way'-attitude
+
+Tosca van Meer, mentored by Tom at Future Facts
