--- a/00-cv.md
+++ b/00-cv.md
@@ -1,6 +1,10 @@
-Pragmatic, goal oriented and versatile freelance cloud engineering consultant with seven years experience designing and developing data products. 
+Pragmatic, goal oriented and versatile freelance consultant with seven years experience designing and developing data products. 
 
 [LinkedIn](https://www.linkedin.com/in/tomrijntjes/)
+
+[Github](https://github.com/tomrijntjes)
+
+[tomrijntjes.nl](https://tomrijntjes.nl/)
 
 ## Experience
 
