--- a/00-cv.md
+++ b/00-cv.md
@@ -1,10 +1,8 @@
 Pragmatic, goal oriented and versatile freelance consultant with seven years experience designing and developing data products. 
 
+*Amsterdam, the Netherlands*
+
 [LinkedIn](https://www.linkedin.com/in/tomrijntjes/)
-
-[Github](https://github.com/tomrijntjes)
-
-[tomrijntjes.nl](https://tomrijntjes.nl/)
 
 ## Experience
 
