--- a/00-cv.md
+++ b/00-cv.md
@@ -59,6 +59,13 @@ Communication Science with an emphasis on life sciences & health communication.
 
 **Minor**: Global Health, epidemiology & nutrition. 
 
+## Selected Skills
+
+- **Project Management**: Agile, Scrum, Kanban, Lean
+- **Communication**, pyramid principle, story-telling with data, negotiation, active listening & coaching
+- **Industry Knowledge**: Automotive, Energy, Logistics, Fashion
+
+
 ## People Say About Me
 
 > Tom’s deep knowledge of data engineering technologies, right balance of delivering quality software versus pragmatism, in combination to his understanding of how a team should function, makes him a very valuable member to every team. Although technical, he has great communication skills that pass the appropriate message, even to a non technical audience.” 
