--- a/00-cv.md
+++ b/00-cv.md
@@ -68,13 +68,19 @@ Communication Science with an emphasis on life sciences & health communication.
 
 ## People Say About Me
 
-> Tom’s deep knowledge of data engineering technologies, right balance of delivering quality software versus pragmatism, in combination to his understanding of how a team should function, makes him a very valuable member to every team. Although technical, he has great communication skills that pass the appropriate message, even to a non technical audience.” 
+> I have had the pleasure of collaborating with Tom for the past year at Cariad, during which his knowledge of Data Engineering combined with his ability to take the initiative and deep dive into complex issues has been remarkable. Tom identifies potential challenges and proactively seeks comprehensive solutions, showcasing a notable aptitude for problem-solving.
 
-Panagiotis Giannakoulias, worked in the same group at Royal Dutch Shell
+Tom's contributions extend beyond their technical skills. He fosters a collaborative environment, encouraging open dialogue and knowledge sharing, significantly enhancing our team's capabilities. His dedication to understanding and addressing the team's needs and the project sets a high professional standard.
 
-> Tom is an excellent coach, engineer and technical leader. He has above par communication skills and extensive knowledge about data and software engineering.
+In summary, I wholeheartedly recommend Tom. His blend of technical knowledge, initiative-taking, thorough analytical skills, and commitment to providing well-rounded solutions makes him an invaluable asset to any team. I am confident that Tom will continue to achieve excellence in any endeavor they pursue.
 
-Matteo Merola, managed Tom at Royal Dutch Shell
+Gerard Maas, Principal Engineer at CARIAD
+
+> Tom has been an invaluable asset to our team, particularly in his role on the Ingenuity project. Beyond his engineering skills, he played a pivotal role in refining our hiring process for cloud engineers. His approach to interviewing candidates is characterized by a genuine warmth and empathy. This approach, coupled with his keen eye for identifying engineering talent, has enhanced the quality of our recruitment efforts.
+Moreover, Tom has the ability to communicate complex technical concepts with clarity and focus, making them accessible to our team with a heterogeneous technical background. His expertise and collaborative spirit make him an exemplary team member and a trusted colleague.
+
+Alicia Weber, Project & Product Management Lead at CARIAD
+
 
 > I've gotten to know Tom as an exceptionally bright person with a knack for technology and a business-driven mind within the Data & Analytics department of the Dutch Railways (NS). He played an important role in several major change processes [...].
 
