--- a/00-cv.md
+++ b/00-cv.md
@@ -70,9 +70,9 @@ Communication Science with an emphasis on life sciences & health communication.
 
 > I have had the pleasure of collaborating with Tom for the past year at Cariad, during which his knowledge of Data Engineering combined with his ability to take the initiative and deep dive into complex issues has been remarkable. Tom identifies potential challenges and proactively seeks comprehensive solutions, showcasing a notable aptitude for problem-solving.
 
-Tom's contributions extend beyond their technical skills. He fosters a collaborative environment, encouraging open dialogue and knowledge sharing, significantly enhancing our team's capabilities. His dedication to understanding and addressing the team's needs and the project sets a high professional standard.
+> Tom's contributions extend beyond their technical skills. He fosters a collaborative environment, encouraging open dialogue and knowledge sharing, significantly enhancing our team's capabilities. His dedication to understanding and addressing the team's needs and the project sets a high professional standard.
 
-In summary, I wholeheartedly recommend Tom. His blend of technical knowledge, initiative-taking, thorough analytical skills, and commitment to providing well-rounded solutions makes him an invaluable asset to any team. I am confident that Tom will continue to achieve excellence in any endeavor they pursue.
+> In summary, I wholeheartedly recommend Tom. His blend of technical knowledge, initiative-taking, thorough analytical skills, and commitment to providing well-rounded solutions makes him an invaluable asset to any team. I am confident that Tom will continue to achieve excellence in any endeavor they pursue.
 
 Gerard Maas, Principal Engineer at CARIAD
 
