--- a/00-cv.md
+++ b/00-cv.md
@@ -6,9 +6,23 @@ Pragmatic, goal oriented and versatile freelance consultant with seven years exp
 
 ## Experience
 
+### **Eneco**/Tech Lead
+
+*March 2024 - Today, Rotterdam*
+
+Provided technical leadership to nine engineers on a high-stakes effort to replace an outdated ordering tool for the **energy trading** desk. 
+Improved forecasting eliminates an annual positioning risk valued at EUR 30 million. 
+In six months I led the team from design to a 1.0 implementation, coordinated with a software vendor and mitigated the technical risk associated with fast-paced delivery.
+
+**Programming**: Java, Python
+
+**Data**: PostgreSQL, Apache Kafka, Snowflake, dbt
+
+**Infrastructure**: Azure Cloud, Kubernetes, Kustomize, Azure Devops
+
 ### **Cariad**/Senior Cloud Engineer
 
-*March 2022 - Today, Ingolstadt*
+*March 2022 - February 2024, Ingolstadt*
 
 Contributor to a high performance cloud development team, responsible for delivering a highly scalable, high throughput system for receiving heterogenous data from the Pioneering fleet. 
 The Bigloop project is a strategic effort that enables **autonomous driving** and ADAS functionality for the various brands of Volkswagen Group.
@@ -31,14 +45,6 @@ Agile Hub Rotterdam is a high performance product delivery department, which dep
 **Data**: PostgreSQL, Azure Storage, Kafka
 
 **Infrastructure**: Azure Cloud, Kubernetes, Terraform, Apache Airflow, Github Actions
-
-### **Future Facts**/Senior Consultant
-
-*February  2018 - November  2019, Amsterdam*
-
-Senior consultant  at a **predictive maintenance** project at transport company de Nederlandse Spoorwegen and at an **interaction data** platform effort at PVH (fashion). 
-Developed the internal masterclass programme for junior data engineers and held a role in the works council at Hot Item group.
-Future Facts is a boutique consulting organisation focused on data science & engineering in the context of business consulting. 
 
 
 ## Education
