eight years now

--- a/00-cv.md
+++ b/00-cv.md
@@ -1,4 +1,4 @@
-Pragmatic, goal oriented and versatile freelance consultant with seven years experience designing and developing data products. 
+Pragmatic, goal oriented and versatile freelance consultant with eight years experience designing and developing data products. 
 
 *Amsterdam, the Netherlands*
 
