clean up phrasing

--- a/00-cv.md
+++ b/00-cv.md
@@ -10,9 +10,7 @@ Pragmatic, goal oriented and versatile freelance consultant with eight years exp
 
 *March 2024 - Today, Rotterdam*
 
-Provided technical leadership to nine engineers on a high-stakes effort to replace an outdated ordering tool for the **energy trading** desk. 
-Improved forecasting eliminates an annual positioning risk valued at EUR 30 million. 
-In six months I led the team from design to a 1.0 implementation, coordinated with a software vendor and mitigated the technical risk associated with fast-paced delivery.
+Led a team of nine engineers to replace an outdated ordering tool for the **energy trading** desk. Improved forecasting cut annual risk by EUR 30 million. Delivered the project from design to implementation in six months, coordinating with the software vendor and managing technical risks.
 
 **Programming**: Java, Python
 
