--- a/00-cv.md
+++ b/00-cv.md
@@ -72,6 +72,18 @@ Communication Science with an emphasis on life sciences & health communication.
 
 ## People Say About Me
 
+> Tom is an exceptional Data Engineer with strong knowledge of best practices around Agile Scrum and software development in general. He is quick and adaptable to using new tools needed to get the job done, and added Architectural Decision Records and blameless post-mortems to our team's toolkit. 
+
+> Tom leads bravely, holding both business and his team to high standards. His consistent demonstration of technical expertise and innovative thinking makes him an invaluable asset to any organization that wants to deliver high-quality software and I would gladly work again with him in the future.
+
+Pepe Bawagan, Data Engineering Squad Lead at Eneco
+
+>Tom offers a blend of technical expertise and constructive leadership. He excels at navigating complex technical challenges while fostering a collaborative team environment. 
+
+> Tom leads with both firmness and inclusivity, ensuring projects succeed while valuing every team member's input. A highly versatile and effective leader, Tom is an asset to any team.
+
+Michiel Thomassen, Data Architect at Eneco
+
 > I have had the pleasure of collaborating with Tom for the past year at Cariad, during which his knowledge of Data Engineering combined with his ability to take the initiative and deep dive into complex issues has been remarkable. Tom identifies potential challenges and proactively seeks comprehensive solutions, showcasing a notable aptitude for problem-solving.
 
 > Tom's contributions extend beyond their technical skills. He fosters a collaborative environment, encouraging open dialogue and knowledge sharing, significantly enhancing our team's capabilities. His dedication to understanding and addressing the team's needs and the project sets a high professional standard.
@@ -84,12 +96,3 @@ Gerard Maas, Principal Engineer at CARIAD
 Moreover, Tom has the ability to communicate complex technical concepts with clarity and focus, making them accessible to our team with a heterogeneous technical background. His expertise and collaborative spirit make him an exemplary team member and a trusted colleague.
 
 Alicia Weber, Project & Product Management Lead at CARIAD
-
-
-> I've gotten to know Tom as an exceptionally bright person with a knack for technology and a business-driven mind within the Data & Analytics department of the Dutch Railways (NS). He played an important role in several major change processes [...].
-
-Wouter Hordijk, managed Tom at Nederlandse Spoorwegen
-
-> When starting my career as a junior data engineer Tom took upon himself the role of mentor. [...] As a mentor Tom stimulated a proactive, business-driven and 'we will find a way'-attitude
-
-Tosca van Meer, mentored by Tom at Future Facts
